--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
-
-page-description {  border:1px solid #0000;}
-
-
-
-
+body { 
+  background-color: #red;
+  
+}
 
 
-background-image: url(https://wallpapercave.com/wp/EacaKU1.jpg);
+
+
+
+
+
 
 
 
