--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { 
-  background-color: #red;
+  background-image: url("https://logos59wordpresscom.files.wordpress.com/2016/04/blue-texture-15893.jpg")
   
 }
 
