--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body { 
   background-image: url("https://logos59wordpresscom.files.wordpress.com/2016/04/blue-texture-15893.jpg")
-  
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 
