--- a/style.css
+++ b/style.css
@@ -7,8 +7,12 @@ body {
 
 
 
+.page-title {
+  text align: center;
+  font-weight: 100; 
+}
 
-
+h1 { font-family:Palatino,'Palatino Linotype', serif; font-size: 32px; color: red;}
 
 
 
