--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { 
-  background-image: url("https://logos59wordpresscom.files.wordpress.com/2016/04/blue-texture-15893.jpg")
+  background-image: url("https://wallpaperbrowse.com/media/images/White-Background-9B1.jpg")
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -14,6 +14,7 @@ body {
 
 
 
+h1 { font-family:Palatino,'Palatino Linotype', serif; font-size: 32px; color: blue;}
 
 
 
