--- a/style.css
+++ b/style.css
@@ -7,6 +7,17 @@ body {
 
 
 
+.page-title {
+  text align: center;
+  font-weight: 100; 
+}
+
+
+
+h1 { font-family:Palatino,'Palatino Linotype', serif; font-size:64px; color: blue;}
+
+
+
 
 
 
