--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { 
-  background-image: url("https://wallpaperbrowse.com/media/images/White-Background-9B1.jpg")
+  background-image: url("https://orig00.deviantart.net/01e7/f/2007/344/b/f/blue_stream_by_dimage.jpg")
   background-size: cover;
   background-repeat: no-repeat;
 }
