--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ color: black;
 
 
 
-h1 { font-family:Palatino,'Palatino Linotype', serif; font-size:64px; color: blue;}
+h1 { font-family:Palatino,'Palatino Linotype', serif; font-size:64px; color: black;}
 
-h2 { color: blue; }
+h2 { color: black; }
 
 
 
