--- a/style.css
+++ b/style.css
@@ -30,3 +30,16 @@ text-align: center;
   text-align: center;
 padding: 30px;}
 
+
+.Work-1 {
+  
+  text-align: center;
+border-bottom: 1px solid
+}
+
+
+
+
+
+
+
